--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
         <img class="size_width_550" src="./assets/flower.jpeg" alt="Image here, hover me and watch me shine!" />
         <span class="title_03">Effect 03</span>
     </div>
-    <div class="container steel">
-    <div class="animated-border-box-glow">
-        <div class="animated-border-box">
-            <span>Image & Text Shine Effect</span>
-            <span>Devant Horgen is the font family</span>
+    <div class="container black">
+        <span class="title_04">Effect 04</span>
+        <div class="row">
+            <div class="gradient-glow">Sunshine</div>
+            <div class="gradient-glow-blur">Sunshine</div>
         </div>
     </div>
+    <div class="container container_75 white">
+        <span class="title_02">Effect 05</span>
+        <div class="mask-image">
+            <img src="./assets/mask.png" />
+        </div>
+    </div>  
 </div>
     
 </body>
